fix result wrapping

--- a/styles/ink.less
+++ b/styles/ink.less
@@ -82,7 +82,7 @@ atom-text-editor::shadow {
 
   max-width: 400px;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: pre;
 
   p {
     margin: 0;
